@@ -1,0 +1,16 @@
+[Settings]
+Host = irc.twitch.tv
+Nickname = <NICKNAME HERE. Note that this name is not actually shown!> 
+Port = 6667
+Password = <OATH TOKEN HERE>
+Channel = <CHANNEL NAME HERE>
+
+[Debug]
+# Debugging settings. Enabling these can help troubleshooting
+# Enabling Print message causes username + message to be printed 
+# Enabling print line causes all messages to be printed as recieved by the bot
+# Enabling print parts causes the list of tags to be printed
+
+Print message = True
+Print line = False
+Print tags = False
